# gw-bridge

./: .gitignore  Cargo.toml  INTERFACE.md  LICENSE  README.md  dist-workspace.toml
claude/command/: delegate-worker.md  gw-bridge-init.md
opencode/command/: ask-claude.md  gw-bridge-init.md  opus-mode.md
prompts/: escalation.md
src/: config.rs  lib.rs  main.rs  protocol.rs  sessions.rs  statusline.rs  template.rs
